--- a/src/components/organisms/Hero/index.scss
+++ b/src/components/organisms/Hero/index.scss
@@ -1,5 +1,58 @@
+.hero-details {
+  padding-top: 8rem;
+  margin: 0 6rem;
+
+  @media screen and (max-width: 980px) {
+    margin: 0 2.5rem;
+  }
+
+  @media screen and (max-width: 500px) {
+    padding-top: 5rem;
+  }
+
+  @media screen and (max-width: 420px) {
+    padding-top: 4rem;
+  }
+}
+
+.background-movie-details {
+  width: 50%;
+
+  @media screen and (max-width: 1024px) {
+    width: 70%;
+  }
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+  }
+}
+
 .background-image {
   filter: brightness(0.8);
+  height: 90vh;
+
+  @media screen and (max-width: 500px) {
+    height: 100vh;
+  }
+}
+
+.title {
+  font-size: 3rem;
+  line-height: 1;
+
+  @media screen and (max-width: 500px) {
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+}
+
+.overview {
+  font-size: 20px;
+  line-height: 28px;
+
+  @media screen and (max-width: 500px) {
+    font-size: 16px;
+  }
 }
 
 .play-btn {
